# cpp_task_4

./: CMakeLists.txt  README.md  main.cpp
GoogleTest/: CMakeLists.txt  FileReaderTest.cpp  SynonymTableFileReaderTest.cpp  SynonymTableTest.cpp  WordsListFileReaderTest.cpp  WordsListFileWriterTest.cpp  WordsListTest.cpp
GoogleTest/lib/docs/: advanced.md
GoogleTest/resources/: test_synonyms_table.txt  test_words_list.txt
SynonymTableLib/: CMakeLists.txt  FileReader.cpp  FileReader.h  SynonymTable.cpp  SynonymTable.h  SynonymTableFileReader.cpp  SynonymTableFileReader.h  WordsList.cpp  WordsList.h  WordsListFileReader.cpp  WordsListFileReader.h  WordsListFileWriter.cpp  WordsListFileWriter.h
view/: SynonymTableToStandardItemModelConverter.cpp  SynonymTableToStandardItemModelConverter.h  generate-command.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
